# BotFather

./: .gitignore  LICENSE  README.md  package.json  todo.txt  tsconfig.json
botfather_c++/: CMakeLists.txt  botfather  botfather.cpp  botfather_c++.sln  botfather_c++.vcxproj  botfather_c++.vcxproj.filters  build.sh  lib.txt  main.cpp  main_backtest.cpp
botfather_c++/common/: axios.cpp  common.h  httplib.h
botfather_c++/include/: MySQL.h  MySQLConnector.h  ThreadPool.h  Worker.h  botfather.h  mysql_connector.h  thread_pool.h  vector_pool.h  worker.h  worker_backtest.h
botfather_c++/include/common/: CustomIndicator.h  Expr.h  Redis.h  Timer.h  axios.h  commonType.h  common_type.h  custom_indicator.h  expr.h  segment_tree.h  sparse_table.h  telegram.h  timer.h  util.h
botfather_c++/include/exchange/: binance_future.h  binance_spot.h  exchange.h  order_monitor.h
botfather_c++/include/socket_server/: socket_binance.h  socket_binance_future.h  socket_bybit.h  socket_bybit_future.h  socket_data.h  socket_okx.h
botfather_c++/lib/: install.sh  libantlr4-runtime.so.4.13.2  libsioclient.so.3  libta_lib.so.0
botfather_c++/src/: MySQLConnector.cpp  ThreadPool.cpp  Worker.cpp  botfather.cpp  mysql_connector.cpp  thread_pool.cpp  worker.cpp  worker_backtest.cpp
botfather_c++/src/SocketServer/: SocketData.cpp
botfather_c++/src/common/: CustomIndicator.cpp  Expr.cpp  Expr.h  Redis.cpp  axios.cpp  axios.h  custom_indicator.cpp  expr.cpp  redis.cpp  segment_tree.cpp  sparse_table.cpp  telegram.cpp  util.cpp
botfather_c++/src/exchange/: binance_future.cpp  binance_spot.cpp  order_monitor.cpp
botfather_c++/src/socket_server/: socket_binance.cpp  socket_binance_future.cpp  socket_bybit.cpp  socket_bybit_future.cpp  socket_data.cpp  socket_okx.cpp
front-end/: index.html  package.json  tsconfig.app.json  vite.config.ts
front-end/src/: App.ts  App.vue  main.ts
front-end/src/Composables/: Composables.ts
front-end/src/assets/: main.css
front-end/src/axios/: axios.ts
front-end/src/components/: BotConfig.ts  BotConfig.vue  Condition.vue  HistoryOrder.ts  HistoryOrder.vue
front-end/src/components/Admin/: Admin.ts  Admin.vue
front-end/src/components/Backtest/: Backtest.ts  Backtest.vue
front-end/src/components/BotConfig/: BotConfig.ts  BotConfig.vue
front-end/src/components/Calculator/: Calculator.ts  Calculator.vue
front-end/src/components/CodeMirror/: CodeMirror.ts  CodeMirror.vue  CompletionList.ts  ExprInput.ts  ExprInput.vue
front-end/src/components/Dashboard/: Dashboard.ts  Dashboard.vue
front-end/src/components/ExprInput/: CompletionList.ts  ExprInput.ts  ExprInput.vue
front-end/src/components/Guide/: Guide.vue
front-end/src/components/HistoryOrder/: BalanceChart.vue  HistoryOrder.ts  HistoryOrder.vue  MarginChart.vue
front-end/src/components/Layout/: DashboardLayout.vue  Header.ts  Header.vue  Sidebar.ts  Sidebar.vue
front-end/src/components/Login/: Login.ts  Login.vue
front-end/src/components/Setting/: Setting.ts  Setting.vue
front-end/src/components/Test/: Test.ts  Test.vue
front-end/src/public/: index.js
front-end/src/router/: router.ts
front-end/src/toast/: toast.ts
js/: config.html
js/WebConfig/public/: index.html
js/WebConfig/public/assets/: index-lRpeB1Z_.css
js/public/: index.css  index.html  index.js
js/removed/: config.html
src/: Backtest.ts  BinanceFuture.ts  DownloadBacktestData.ts  Expr.g4  Expr.ts  GoogleSheet.ts  Interface.ts  RateServer.ts  ServerData.ts  UpdateOrderStatus.ts  arbitrageSpotFuture.ts  bot80.ts  bot81.ts  bot82.ts  botFather.test.ts  botFather.ts  botFatherConfig.ts  bot_rsi_cci.ts  bot_warning.ts  chinh.ts  fatherBot.ts  payment.ts  setupConfig.ts  socket_binance.ts  socket_binance_future.ts  socket_bybit.ts  socket_bybit_future.ts  socket_okx.ts  socket_price_server.ts  socket_server.ts  telegram.ts  test.ts  updateSheet.ts  util.ts  worker.ts  worker_socket.ts
src/RateServer/: RateServer.ts  SocketServer.ts
src/SocketServer/: socket_binance.ts  socket_binance_future.ts  socket_bybit.ts  socket_bybit_future.ts  socket_data.ts  socket_okx.ts  socket_server.ts
src/WebConfig/: WebConfig.ts  routes.ts
src/WebConfig/business/: BotConfig.ts  Dashboard.ts  User.ts
src/WebConfig/controller/: BotConfig.ts  Dashboard.ts  User.ts
src/WebConfig/lib/: mysql.ts
src/WebConfig/mysql/: mysql.ts
src/common/: Cache.ts  CustomIndicator.ts  Expr.g4  Expr.ts  Interface.ts  redis.ts  telegram.ts  util.ts
src/removed/: ServerData.ts  bot83.ts  bot_rsi_cci.ts  setupConfig.ts
